--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 # PostgresDB Go Library
 
-This library simplifies interaction with a Postgres database as key value storage. It streamlines tasks such as storing, retrieving, and deleting data, as well as executing batch insertions and deletions.
+This library simplifies interaction with a Postgres database as key-value storage. It streamlines tasks such as storing, retrieving, and deleting data, as well as executing batch insertions and deletions.
 
 ## Installation
 
@@ -12,26 +12,68 @@ Begin by initializing the interface with the `NewPostgresDB(name, dir string)` f
 
 Here's how to get started:
 
-```go
-// Create a new instance of PostgresDB
-db, err := NewPostgresDB("inde-xer:indexer123@localhost:5433", "indexer")
-if err != nil {
-    log.Fatalf("Failed to create a new instance of PostgresDB: %v", err)
-// Define test data
-key := []byte("test_key")
-value := []byte("test_value")
+```shell
+package main
 
-// Call the Set method
-err = db.Set(key, value)
-if err != nil {
-    log.Fatalf("Failed to set data: %v", err)
-}
+import (
+    "fmt"
+    "log"
 
-// Check if the value is set correctly
-result, err := db.Get(key)
-if err != nil {
-    log.Fatalf("Failed to get data: %v", err)
-}
+    "github.com/tesfayh/postgresKVdb"
+)
+
+func main() {
+    // Initialize the PostgresDB instance
+    db, err := postgresKVdb.NewPostgresDB("inde-xer:indexer123@localhost:5433", "indexer")
+    if err != nil {
+        log.Fatalf("Failed to create a new instance of PostgresDB: %v", err)
+    }
+
+    // Define test data
+    key := []byte("test_key")
+    value := []byte("test_value")
+
+    // Call the Set method
+    err = db.Set(key, value)
+    if err != nil {
+        log.Fatalf("Failed to set  %v", err)
+    }
+
+    // Check if the value is set correctly
+    result, err := db.Get(key)
+    if err != nil {
+        log.Fatalf("Failed to get  %v", err)
+    }
+
+    fmt.Printf("The value of the key is: %s\n", result)
 }
 ```
-# see the testcases in the repo to see the features
+
+## Configuration
+
+To configure the library for your Postgres setup, modify the connection parameters in the `NewPostgresDB` function call according to your database configuration.
+
+```go
+// Initialize the PostgresDB instance with custom connection parameters
+db, err := postgresKVdb.NewPostgresDB("<username>:<password>@<host>:<port>", "<database_name>")
+```
+
+## Error Handling
+
+Errors within the library are handled using Go's built-in error handling mechanism. It's recommended to handle errors returned by library functions gracefully in your code.
+
+```shell
+// Example error handling
+result, err := db.Get(key)
+if err != nil {
+    log.Fatalf("Failed to get  %v", err)
+}
+```
+
+## Contributing
+
+We welcome contributions from the community! If you encounter any bugs, have feature requests, or want to contribute code changes, please follow the guidelines outlined in our [Contribution Guidelines](CONTRIBUTING.md).
+
+```
+
+### Would you like to print the revised README file?
